--- a/app/sass/header.sass
+++ b/app/sass/header.sass
@@ -1,5 +1,27 @@
 .header
+  position: relative
+  display: flex
+  align-items: center
   width: 100%
-  height: 400px
-  background-size: cover
+  height: 360px
   background: url('../images/head-bg.jpg')
+  background-size: cover
+  background-position: center
+  .header-content
+    padding: .5em
+  .carrot-logo
+    position: absolute
+    width: 6.5em
+    top: 1em
+    left: 1em
+  .carrot-harvest
+    position: absolute
+    top: 255px
+    left: 0
+    right: 0
+    width: 3em
+    margin: auto
+    cursor: pointer
+    filter: brightness(1.05)
+  h1
+    margin-top: 0
