About section content. 1st
Set container padding.
Add about title and ipsum.
Style about section text

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -2,7 +2,7 @@
 @import "typography"
 @import "nav"
 @import "header"
-@import "intro"
+@import "about"
 @import "benefits"
 @import "types"
 @import "contact"
