--- a/app/sass/typography.sass
+++ b/app/sass/typography.sass
@@ -5,8 +5,19 @@
 	font-weight: normal
 	font-style: normal
 
-.header
-  font-family: 'Aquawax', 'Poppins', sans-serif
-  text-align: center
-  color: #fff
+.header,
+.about-title
   text-transform: uppercase
+
+.header
+	font-family: 'Aquawax', 'Poppins', sans-serif
+	text-align: center
+	color: #fff
+	letter-spacing: 1.6px
+	h2
+		line-height: 1.3
+
+.about-title
+	font-family: 'Cabin', sans-serif
+	font-size: 1.4rem
+	letter-spacing: 1.4px
