--- a/app/sass/typography.sass
+++ b/app/sass/typography.sass
@@ -5,19 +5,55 @@
 	font-weight: normal
 	font-style: normal
 
+.section-title,
+.type-main h4
+	font-family: 'Cabin', sans-serif
+
 .header,
-.about-title
-  text-transform: uppercase
+.section-title,
+.type-main h4,
+.types .type-info ul li
+	text-align: center
+
+.header,
+.section-title,
+.type-main h4
+	text-transform: uppercase
+	letter-spacing: 1.4px
+
 
 .header
 	font-family: 'Aquawax', 'Poppins', sans-serif
-	text-align: center
 	color: #fff
 	letter-spacing: 1.6px
 	h2
 		line-height: 1.3
 
-.about-title
-	font-family: 'Cabin', sans-serif
+.section-title
 	font-size: 1.4rem
-	letter-spacing: 1.4px
+
+.benefit
+	text-align: center
+	line-height: 1.4
+	@media(min-width: 340px)
+		font-size: .8rem
+		&:nth-of-type(odd)
+			text-align: right
+		&:nth-of-type(even)
+			text-align: left
+	@media(min-width: 360px)
+		font-size: .85rem
+	@media(min-width: 470px)
+		font-size: .95rem
+	@media(min-width: 600px)
+		font-size: 1.05rem
+	@media(min-width: 768px)
+		font-size: 1.2rem
+
+.types
+	h4
+		font-size: 1.1rem
+	ul li
+		 font-size: .9rem
+			@media(min-width: 768px)
+			  font-size: .95rem
