--- a/app/sass/general.sass
+++ b/app/sass/general.sass
@@ -9,4 +9,19 @@ body
 	-moz-osx-font-smoothing: grayscale
 
 .container
-  padding: 1.5em 1em
+  padding: 1.5em 1em 2em
+
+.dark-bg
+  background: #e7e7e7
+
+.navbar-toggle,
+.types .carrot-type h4,
+.types .carrot-type img,
+.types .type-info
+    transition: .4s
+
+.about,
+.contact
+	.container
+		max-width: 550px
+		margin: 0 auto
