--- a/app/sass/types.sass
+++ b/app/sass/types.sass
@@ -1,7 +1,11 @@
 .types
+  .container
+    max-width: 600px
+    margin: 0 auto
   .carrot-type
     position: relative
     overflow: hidden
+    outline: none
     .type-main
       height: 395px
     h4
@@ -63,10 +67,3 @@
       cursor: pointer
   .type-info.open-info
     transform: translateY(0)
-
-
-
-.types .carrot-type h4,
-.types .carrot-type img,
-.types .type-info
-    transition: .4s
