--- a/app/sass/header.sass
+++ b/app/sass/header.sass
@@ -8,6 +8,7 @@
   background-size: cover
   background-position: center
   .header-content
+    width: 100%
     padding: .5em
   .carrot-logo
     position: absolute
@@ -25,3 +26,20 @@
     filter: brightness(1.05)
   h1
     margin-top: 0
+
+.pull-carrot
+  animation: pullCarrot 2.8s .2s forwards
+
+@keyframes pullCarrot
+  5%
+    transform: rotate(4deg)
+  10%
+    transform: rotate(-4deg)
+  15%
+    transform: rotate(4deg)
+  20%
+    transform: rotate(-4deg)
+  60%
+    transform: translatey(-8em)
+  100%
+    transform: translatey(-50em)
