Media queries and fixes

--- a/app/sass/contact.sass
+++ b/app/sass/contact.sass
@@ -1,6 +1,8 @@
 .contact
   background: #e97534
   background: linear-gradient(to bottom, #e97534 0%,#c45b0f 100%)
+  .container
+    padding-bottom: 3.7em
   label,
   input
     display: block
