--- a/app/sass/benefits.sass
+++ b/app/sass/benefits.sass
@@ -2,6 +2,14 @@
   position: relative
   .container
     padding: 1.5em .5em 2em
+    @media(min-width: 340px)
+      padding-bottom: 3em
+    @media(min-width: 360px)
+      padding-bottom: 1.2em
+    @media(min-width: 600px)
+      padding-bottom: 6.5em
+    @media(min-width: 768px)
+      padding-bottom: 8em
   .benefits-carrot
     position: absolute
     display: none
@@ -23,6 +31,8 @@
   .benefits
     .benefits-carrot
       display: block
+    .section-title
+      margin-bottom: 1.2em
   .benefit
     align-items: center
     width: 109px
@@ -43,7 +53,7 @@
         margin-right: .4em
         transform: rotateY(180deg)
     &:nth-of-type(1)
-      margin-top: 2.5em
+      margin-top: 2.7em
 
 @media(min-width: 360px)
   .benefits-content
@@ -52,11 +62,13 @@
   .benefit
     width: 121px
     margin-bottom: .3em
+    &:nth-of-type(1)
+      margin-top: 3.7em
 
 @media(min-width: 470px)
   .benefits-content
     max-width: 400px
-    margin-bottom: 2.7em
+    margin-bottom: 2em
   .benefits
     .benefits-carrot
       width: 6.5em
