--- a/app/sass/general.sass
+++ b/app/sass/general.sass
@@ -9,7 +9,9 @@ body
 	-moz-osx-font-smoothing: grayscale
 
 .container
-  padding: 1.5em 1em 2em
+	padding: 1.5em 1em 2em
+	@media(min-width: 768px)
+		padding-bottom: 3em
 
 .dark-bg
   background: #e7e7e7
@@ -25,3 +27,5 @@ body
 	.container
 		max-width: 550px
 		margin: 0 auto
+		@media(min-width: 768px)
+      max-width: 750px
