--- a/app/sass/typography.sass
+++ b/app/sass/typography.sass
@@ -31,9 +31,29 @@ body
 	letter-spacing: 1.6px
 	h2
 		line-height: 1.3
+	@media(min-width: 520px)
+		h1
+			font-size: 2.45rem
+		h2
+			font-size: 1.55rem
+	@media(min-width: 768px)
+		h1
+			font-size: 3.8rem
+		h2
+			font-size: 1.7rem
 
 .section-title
 	font-size: 1.4rem
+	@media(min-width: 360px)
+		font-size: 1.55rem
+	@media(min-width: 500px)
+		font-size: 1.65rem
+	@media(min-width: 768px)
+		font-size: 1.85rem
+	@media(min-width: 1020px)
+		font-size: 2rem
+	@media(min-width: 1280px)
+		font-size: 2.3rem
 
 p
 	letter-spacing: .9px
@@ -86,8 +106,14 @@ p
 		font-size: 1.1rem
 	ul li
 		 font-size: .9rem
-			@media(min-width: 768px)
-			  font-size: .95rem
+	@media(min-width: 768px)
+		h4
+			font-size: 1.3rem
+		ul li
+			font-size: .95rem
+	@media(min-width: 1020px)
+		h4
+			font-size: 1.5rem
 
 
 .contact .section-title
