Change HTML to PHP. Add contact form PHP, check for errors and give result.

--- a/app/sass/typography.sass
+++ b/app/sass/typography.sass
@@ -115,18 +115,6 @@ p
 		h4
 			font-size: 1.5rem
 
-
-.contact .section-title
-	color: #fff
-.contact
-	.btn,
-	label
-		color: #fff
-		font-size: 1em
-		text-align: center
-		text-transform: uppercase
-		letter-spacing: 1.4px
-
 .sign-up
 	.section-title,
 	p
@@ -147,3 +135,17 @@ p
 		font-size: 1.2rem
 	.sign-up-btn
 		text-transform: uppercase
+
+.contact .section-title
+	color: #fff
+.contact
+	.btn,
+	label,
+	.result p
+		color: #fff
+		font-size: 1em
+		text-align: center
+		text-transform: uppercase
+		letter-spacing: 1.4px
+	.result p
+		font-size: .8rem
